force-app/main/default/objects/Delivery_Dormant_History__c/Delivery_Dormant_History__c.object-meta.xml
<CustomObject>
    <label>Delivery Dormant History</label>
    <nameField>
        <displayFormat>DDH-{00000}</displayFormat>
        <label>Delivery Dormant History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Dormant Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>