force-app/main/default/objects/Delivery_Dormant_History__c/fields/Activated_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Activated_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activated Automatically</label>
    <type>Checkbox</type>
</CustomField>