force-app/main/default/objects/Delivery_Dormant_History__c/fields/Dormant_Duration_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Duration_Business_Days__c</fullName>
    <formula>If(ISNULL(Dormant_End_Date__c), 
CASE(MOD( Dormant_Start_Date__c- DATE(1985,6,24),7), 
0 , CASE( MOD( Today()- Dormant_Start_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Today()- Dormant_Start_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Today()- Dormant_Start_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Today()- Dormant_Start_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Today()- Dormant_Start_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Today()- Dormant_Start_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Today()- Dormant_Start_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Today()- Dormant_Start_Date__c)/7)*5), 
CASE(MOD( Dormant_Start_Date__c- DATE(1985,6,24),7), 
0 , CASE( MOD( Dormant_End_Date__c- Dormant_Start_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Dormant_End_Date__c- Dormant_Start_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Dormant_End_Date__c- Dormant_Start_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Dormant_End_Date__c- Dormant_Start_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Dormant_End_Date__c- Dormant_Start_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Dormant_End_Date__c- Dormant_Start_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Dormant_End_Date__c- Dormant_Start_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Dormant_End_Date__c- Dormant_Start_Date__c)/7)*5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dormant Duration (Business Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>