force-app/main/default/objects/Delivery_Dormant_History__c/fields/Dormant_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Reason__c</fullName>
    <inlineHelpText>Please enter information about this dormant status instance</inlineHelpText>
    <label>Dormant Reason Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>