force-app/main/default/objects/Delivery_Dormant_History__c/fields/Dormant_Reason_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Reason_Picklist__c</fullName>
    <label>Dormant Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Not started - customer not ready</fullName>
            </value>
            <value>
                <fullName>On hold -  Training completed / customer not ready to transfer funds/ go live</fullName>
            </value>
            <value>
                <fullName>On hold – customer resource constraints</fullName>
            </value>
            <value>
                <fullName>On hold - dependent on 3rd party</fullName>
            </value>
            <value>
                <fullName>On hold - awaiting pilot customer</fullName>
            </value>
            <value>
                <fullName>Completed - Future activated VANs/waiting for settlement</fullName>
            </value>
            <value>
                <fullName>Other - Provide additional information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>