force-app/main/default/objects/Delivery_Dormant_History__c/fields/Dormant_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Dormant Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>