force-app/main/default/objects/Delivery_Dormant_History__c/fields/Related_Delivery_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Related_Delivery_Ticket__c</fullName>
    <label>Related Delivery Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Delivery Dormant Record</relationshipLabel>
    <relationshipName>Delivery_Dormant_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>